sasql/tests/compile_fail_features/missing_decimal.stderr
error: column "budget": column type is NUMERIC (OID 1700) — enable feature "decimal" in sasql
 --> tests/compile_fail_features/missing_decimal.rs:5:13
  |
5 |     let _ = sasql::query!("SELECT id, budget FROM tickets WHERE id = $id: i32");
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `sasql::query` (in Nightly builds, run with -Z macro-backtrace for more info)
